Add client routes
