# src/configs/swagger.config.json
@@ -582,6 +582,276 @@
                     }
                 }
             }
+        },
+        "/api/client/create-info-client": {
+            "post": {
+                "tags": ["Client"],
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Must be access token admin",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+                        "type": "string",
+                        "required": true
+                    },
+                    {
+                        "in": "formData",
+                        "name": "email",
+                        "type": "string",
+                        "required": true,
+                        "example": "example@mail.com",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "fullName",
+                        "type": "string",
+                        "required": true,
+                        "example": "example",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "gender",
+                        "required": true,
+                        "type": "string",
+                        "example": "male",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "dateOfBirth",
+                        "type": "string",
+                        "example": "2023-11-11",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "phoneNumber",
+                        "type": "string",
+                        "example": "0123456789",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "address",
+                        "type": "string",
+                        "example": "123 St Miami",
+                        "description": ""
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/client/update-info-client/{:_id}": {
+            "put": {
+                "tags": ["Client"],
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "description": "Must be access token admin",
+                        "in": "header",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+                        "type": "string",
+                        "required": true
+                    },
+                    {
+                        "in": "path",
+                        "name": "_id",
+                        "type": "string",
+                        "required": true,
+                        "example": "1",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "email",
+                        "type": "string",
+                        "example": "example@mail.com",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "fullName",
+                        "type": "string",
+                        "example": "example",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "gender",
+                        "type": "string",
+                        "example": "male",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "dateOfBirth",
+                        "type": "string",
+                        "example": "2023-11-11",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "phoneNumber",
+                        "type": "string",
+                        "example": "0123456789",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "address",
+                        "type": "string",
+                        "example": "123 St Miami",
+                        "description": ""
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/client/delete-client/{:_id}": {
+            "delete": {
+                "tags": ["Client"],
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Must be access token admin",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+                        "type": "string",
+                        "required": true
+                    },
+                    {
+                        "in": "path",
+                        "name": "_id",
+                        "required": true,
+                        "type": "string",
+                        "example": "1",
+                        "description": ""
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/client/get-client-detail/{:_id}": {
+            "get": {
+                "tags": ["Client"],
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+                        "type": "string",
+                        "required": true
+                    },
+                    {
+                        "in": "path",
+                        "name": "_id",
+                        "required": true,
+                        "type": "string",
+                        "example": "1",
+                        "description": ""
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/client/get-client-list": {
+            "get": {
+                "tags": ["Client"],
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+                        "type": "string",
+                        "required": true
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "type": "string",
+                        "example": "10",
+                        "description": ""
+                    },
+                    {
+                        "in": "query",
+                        "name": "page",
+                        "type": "string",
+                        "example": "1",
+                        "description": ""
+                    },
+                    {
+                        "in": "query",
+                        "name": "search",
+                        "type": "string",
+                        "example": "a",
+                        "description": "Using to search for client's full name or email "
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/client/upload-avatar-client/{:_id}": {
+            "post": {
+                "tags": ["Client"],
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+                        "type": "string",
+                        "required": true
+                    },
+                    {
+                        "in": "path",
+                        "name": "_id",
+                        "type": "string",
+                        "required": true,
+                        "example": "1",
+                        "description": ""
+                    },
+                    {
+                        "in": "formData",
+                        "name": "avatar",
+                        "type": "file",
+                        "example": "",
+                        "description": ""
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     }
 }
