# src/controllers/employee/employee.routes.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import * as Controller from './employee.controller';
-import { Authorization, ImageHandler } from '../../middlewares';
+import { Authorization, CheckRole, ImageHandler } from '../../middlewares';
 
 export const EmployeeRouter = Router();
 
@@ -8,11 +8,16 @@ EmployeeRouter.put('/register-employee-profile', Controller.registerEmployeeProf
 EmployeeRouter.put('/update-employee-profile', Authorization, Controller.updateEmployeeProfile);
 EmployeeRouter.get('/get-employee-profile', Authorization, Controller.getEmployeeProfile);
 EmployeeRouter.get('/get-employee-profile/:_id', Authorization, Controller.getEmployeeProfile);
-EmployeeRouter.get('/get-employee-list', Authorization, Controller.getEmployeeList);
+EmployeeRouter.get('/get-employee-list', Authorization, CheckRole, Controller.getEmployeeList);
 EmployeeRouter.post(
     '/upload-avatar-employee',
     Authorization,
     ImageHandler.single('avatar'),
     Controller.uploadEmployeeAvatar,
 );
-EmployeeRouter.put('/edit-employee-role/:_id', Authorization, Controller.editEmployeeRole);
+EmployeeRouter.put(
+    '/edit-employee-role/:_id',
+    Authorization,
+    CheckRole,
+    Controller.editEmployeeRole,
+);
